# $Id$

2007-06-04	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: cutOnSpace() added.

2007-05-30	Konstantin V. Arkhipov

	* main/Criteria/Projections/ClassProjection.class.php: new projection
	type introduced.

2007-05-29	Ivan Y. Khvostishkov

	* main/Utils/RussianTextUtils.class.php: added charset detection.

2007-05-24	Konstantin V. Arkhipov

	* core/Base/Singleton.class.php, ext/src/core/Base/Singleton.c:
	getAllInstances() added.

	* main/DAOs/GenericDAO.class.php: dropIdentityMap() added.

	* core/Cache/: now drops all identity maps from available DAOs during
	clean().

2007-05-23	Anton E. Lebedevich

	* main/Flow/HttpErrorView.class.php: HttpErrorView added.

2007-05-21	Dmitry A. Lomash

	* main/Utils/IO/Reader.class.php,
	main/Utils/IO/StringReader.class.php: getWhole() added.

2007-05-19	Dmitry A. Lomash

	* main/Utils/IO/: Reader and StringReader added.

2007-05-17	Ivan Y. Khvostishkov

	* main/Utils/IO/: client socket implementation from branches/0.10.

2007-05-16	Denis M. Gabaidulin

	* main/Utils/FileUtils.class.php: makeUniqueName() added.

2007-05-15	Denis M. Gabaidulin

	* main/Utils/RussianTextUtils.class.php: toTranslit(), toRussian()
	convrters was added.

	* core/Exceptions/FileNotFoundException.class.php,
	ext/src/core/Exceptions.c: FileNotFoundException added.

	* main/Base/IntegerSet.class.php: simple integer's set introduced.

2007-05-14	Konstantin V. Arkhipov

	* ext/src/core/Exceptions.c: ClassNotFoundException added.

2007-05-13	Konstantin V. Arkhipov

	* meta/types/NumericType.class.php: one more type introduced.

	* main/Criteria/Criteria.class.php: fetchCollection now supports
	distinct and limitizing clauses from given Criteria.

2007-05-10	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: shiny new meta type;
	suggested and implemented by sherman.

	* global.inc.php.tpl: __autoload() now throws ClassNotFoundException
	even if classes paths cache is disabled.

2007-05-10	Ivan Y. Khvostishkov
